<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.akun.AkunFragment">

    <include
        android:id="@+id/login"
        layout="@layout/fragment_login_tidak"/>

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/colorPrimary"
       app:title="Profil"
       app:titleTextColor="@color/white"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:visibility="gone">
        <RelativeLayout


            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:ignore="MissingConstraints">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profil"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"

                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@id/img_profil"
                android:fontFamily="@font/alice"
                android:text="User"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/img_profil"
                />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_toko"
            app:layout_constraintTop_toBottomOf="@id/relative"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/open_toko"
                android:text="Buka Toko Gratis"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:drawableLeft="@drawable/ic_baseline_add_circle_24"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
        </androidx.cardview.widget.CardView>

        <EditText
            app:layout_constraintTop_toBottomOf="@id/btn_toko"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/et_style"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/nama_lengkap"
            android:id="@+id/et_username"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:inputType="textPersonName"

            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        <EditText
            app:layout_constraintTop_toBottomOf="@id/et_username"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/et_style"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/email"
            android:id="@+id/et_email"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:inputType="textEmailAddress"

            android:drawableLeft="@drawable/ic_baseline_local_post_office_24"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        <EditText
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/et_style"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/nomor_handphone"
            android:id="@+id/et_nohp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:inputType="textEmailAddress"

            android:drawableLeft="@drawable/ic_baseline_phone_android_24"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        <EditText
            app:layout_constraintTop_toBottomOf="@id/et_nohp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/et_style"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/alamat"
            android:id="@+id/et_alamat"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:inputType="textEmailAddress"

            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            tools:ignore="MissingConstraints,RtlHardcoded" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>